--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ h2 {
     font-size: 32px;
 }
 .cloud {
-  background-image: url(/cloud.png);
+  background-image: url(https://i.ibb.co/0GSkHr0/pinkcloud.png);
     background-color: #fff;
     background-size: contain;
     width: 300px;
